@@ -6,6 +6,7 @@ and this project **does not adhere to [Semantic Versioning](http://semver.org/sp
 ### Added
 
 * IS_SSHALLOWUSERS: also scan /etc/ssh/sshd_config.d
+* IS_CHECK_VERSIONS: check installed versions of Evolix programs
 
 ### Changed
 
